[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.15"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplantri"
version = "0.1.0"
description = "Python wrapper for plantri - planar graph generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Suil Hwang", email = "av600md@gmail.com"}
]
keywords = ["graph", "planar", "triangulation", "quadrangulation", "plantri"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/suil-hwang/pyplantri"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyplantri*"]

[tool.setuptools.package-data]
pyplantri = ["bin/*", "bin/**/*"]
