[build-system]
requires = ["scikit-build-core>=0.8"]
build-backend = "scikit_build_core.build"

[project]
name = "pyplantri"
version = "0.1.0"
description = "Python wrapper for plantri - Simple Quadrangulation on Sphere (SQS) enumeration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Suil Hwang", email = "av600md@gmail.com"}
]
keywords = ["graph", "planar", "quadrangulation", "plantri", "SQS", "enumeration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/suil-hwang/pyplantri"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = []
wheel.install-dir = "src/pyplantri/bin"
wheel.packages = ["src/pyplantri"]
editable.mode = "redirect"
editable.rebuild = true
build-dir = "build/{wheel_tag}"

